# cli-monitor

./: .gitignore  AGENTS.md  LICENSE  README.md  README_cn.md  pyproject.toml  setup.sh
cli_monitor/: __init__.py  cli.py  focus.py  store.py  tui.py  wrapper.py
docs/: research.md
tests/: test_cli.py  test_focus.py  test_tui.py
