[project]
name = "cli-monitor"
version = "0.1.0"
description = "Local monitor for wrapped Claude/Codex CLI sessions."
keywords = [
  "cli",
  "terminal",
  "monitor",
  "tui",
  "pty",
  "tmux",
  "agent-cli",
  "claude",
  "claude-code",
  "codex",
  "codex-cli",
  "openai-codex",
]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Topic :: Terminals",
]
requires-python = ">=3.10"
dependencies = [
  "textual>=0.89.0",
]

[project.scripts]
cli-monitor = "cli_monitor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
